# vkguide

./: Cargo.toml  README.md  vk_layer_settings.txt
shaders/: colored_triangle.frag  colored_triangle.vert  colored_triangle_mesh.vert  gradient.comp  gradient_color.comp  input_structs.glsl  mesh.frag  mesh.vert  sky.comp  tex_image.frag
src/: app.rs  buffer.rs  compute.rs  descriptors.rs  engine.rs  frames.rs  graphics.rs  gui.rs  immediate.rs  lib.rs  main.rs  material.rs  mesh.rs  pipeline.rs  render_objects.rs  shader.rs  swapchain.rs  texture.rs  utils.rs  vulkan.rs
