[package]
name = "vkguide"
version = "0.1.0"
edition = "2024"

[dependencies]

time = { version = "0.3.45", features = ["macros"], default-features = false }
tracing-subscriber = { version = "0.3.22", features = [
    "env-filter",
    "local-time",
    "ansi",
], default-features = false }
tracing = { version = "0.1.44", default-features = false }
ash = { version = "0.38.0", features = ["debug"], default-features = false }
egui-ash-renderer = { version = "0.11.0", features = [
    "dynamic-rendering",
    "vk-mem",
] }
vk-mem = { version = "0.5.0", default-features = false }
winit = { version = "0.30.12", default-features = false, features = [
    "x11",
    "rwh_06",
] }
ash-window = "0.13.0"
eyre = { version = "0.6.12", default-features = false }
color-eyre = "0.6.5"
shaderc = "0.10.1"
egui = { version = "0.33.3", default-features = false }
egui_extras = "0.33.3"
egui-winit = { version = "0.33.3", features = [
    "bytemuck",
], default-features = false }
bon = { version = "3.8.2", default-features = false }
[lints.rust]
ambiguous_negative_literals = "warn"
# missing_debug_implementations = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"


[lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }     # optional, might cause more false positives

# These lints are from the `restriction` lint group and prevent specific
# constructs being used in source code in order to drive up consistency,
# quality, and brevity
# allow_attributes_without_reason = "warn"
as_pointer_underscore = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
deref_by_slicing = "warn"
disallowed_script_idents = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
fn_to_numeric_cast_any = "warn"
if_then_some_else_none = "warn"
map_err_ignore = "warn"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
semicolon_outside_block = "warn"
string_to_string = "warn"
# undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unneeded_field_pattern = "warn"
unused_result_ok = "warn"

# May cause issues with structured logging otherwise.
literal_string_with_formatting_args = "allow"

# Define custom opt outs here
cargo_common_metadata = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
#items_after_statements = "allow"
multiple_crate_versions = "allow"
cast_sign_loss = "allow"
#cast_possible_wrap = "allow"
missing_errors_doc = "allow"
struct_field_names = "allow"
